# openGLheightmap

./: CMakeLists.txt
data/: test.map
data/shaders/: map.frag.glsl  map.vert.glsl
sources/: GLinstance.abstract.cpp  GLinstance.abstract.hpp  HeightMap.class.cpp  HeightMap.class.hpp  Main.class.cpp  Main.class.hpp  Shader.class.cpp  Shader.class.hpp  main.cpp
